feat: strange OS support

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
 CC = cc
 CFLAGS = 
 PREFIX = /usr/local
-OBJS_COMMON = src/lookup.o src/delimiter.o src/libarg/libarg.o
-OBJS_FINDEX = src/findex.o
-OBJS_FIDXGEN = src/findex_gen.o
-OBJS_FIDXPRM = src/findex_prompt.o
+OBJS_COMMON = lookup.o delimiter.o libarg.o
+OBJS_FINDEX = findex.o
+OBJS_FIDXGEN = findex_gen.o
+OBJS_FIDXPRM = findex_prompt.o
 
 
 .PHONY: all clean
@@ -33,8 +33,8 @@ install: $(OBJS) findex
 	cp findex $(PREFIX)/bin/findex
 	cp findex_gen $(PREFIX)/bin/findex_gen
 	cp findex_prompt $(PREFIX)/bin/findex_prompt
-	cp doc/findex.1 $(PREFIX)/share/man/man1/findex.1
-	cp doc/findex_gen.1 $(PREFIX)/share/man/man1/findex_gen.1
+	cp ../doc/findex.1 $(PREFIX)/share/man/man1/findex.1
+	cp ../doc/findex_gen.1 $(PREFIX)/share/man/man1/findex_gen.1
 
 uninstall:
 	rm -f $(PREFIX)/bin/findex
